--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "ai": "^3.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.456.0",
     "next": "14.2.16",
     "next-themes": "^0.4.3",
+    "openai": "^4.72.0",
     "react": "^18",
     "react-dom": "^18",
     "react-webcam": "^7.2.0",
