--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ai": "^3.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.456.0",
@@ -28,7 +29,9 @@
     "openai": "^4.72.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-webcam": "^7.2.0",
+    "rehype-prism": "^2.3.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
