--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
+    "groq-sdk": "^0.8.0",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.456.0",
     "next": "14.2.16",
