--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "rehype-prism": "^2.3.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
