--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-themes": "^0.4.3",
     "openai": "^4.72.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-webcam": "^7.2.0",
