--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-webcam": "^7.2.0",
+    "recharts": "^2.13.3",
     "rehype-prism": "^2.3.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
