--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@remixicon/react": "^4.5.0",
     "ai": "^3.0.7",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -39,6 +40,7 @@
     "rehype-prism": "^2.3.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
+    "tailwind-variants": "^0.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
     "vaul": "^1.1.1",
